# BookFetch

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: development.md  user_guide.md
legacy/: README.md  archive-org-downloader.py  epub_to_pdf.py
scripts/: verify.sh
src/bookfetch/: __init__.py  app.py  cli.py  interactive.py
src/bookfetch/config/: __init__.py  constants.py  settings.py
src/bookfetch/core/: authenticator.py  converter.py  downloader.py  loan_manager.py  models.py  searcher.py
src/bookfetch/utils/: __init__.py  exceptions.py  image_utils.py  logger.py  pdf_utils.py  validators.py
tests/: __init__.py  conftest.py
tests/integration/: test_e2e_download.py
tests/unit/: test_authenticator.py  test_downloader.py  test_pdf_utils.py  test_searcher.py  test_validators.py
